# xmlschemer

./: Cargo.toml  Readme.md  compiler_error.txt
src/: build.rs  lib.rs  main.rs  schema.rs
src/schema/: mod.rs  resolution.rs  root.rs
src/schemas/: primitives.xsd
tests/: gpx_sample.rs  kml_sample.rs  samples.rs  schema.rs
tests/fixtures/: XMLSchema.xsd  XMLSchema1.xsd  atom-oasis.xsd  gpx.xsd
