[package]
name = "xmlschemer"
version = "0.1.0"
authors = ["Evan Simmons <esims89@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
log = "0.4.6"
pretty_env_logger = "0.3.0"
xml-rs = "0.8.0"
serde_derive = "1.0.88"
serde = "1.0.88"
quote = "0.6.11"
syn = "0.15.26"
proc-macro2 = "0.4.27"
heck = "0.3.1"
if_chain = "0.1.3"
rustfmt-nightly = "1.0.3"
chrono = { version = "0.4.6", features = ["serde"] }

[dependencies.serde-xml-rs]
version = "0.3.0"
path = "../serde-xml-rs"
